[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Matt <matthieu.zandecki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"
torch = "^2.2.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
